--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.2",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-js-loader": "^0.1.3",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
